--- a/2D_Side_Scroller/2D_Side_Scroller.csproj
+++ b/2D_Side_Scroller/2D_Side_Scroller.csproj
@@ -71,7 +71,19 @@
     <Content Include="Assets\Sounds\harp.wav" />
     <Content Include="Assets\Sounds\harpoon.mp3" />
     <Content Include="Assets\Sounds\underwater.mp3" />
+    <Content Include="humans.txt" />
+    <Content Include="icons\fi-address-book.svg" />
+    <Content Include="icons\fi-female-symbol.svg" />
+    <Content Include="icons\fi-social-facebook.svg" />
+    <Content Include="icons\fi-social-github.svg" />
+    <Content Include="icons\fi-social-instagram.svg" />
+    <Content Include="icons\fi-social-linkedin.svg" />
+    <Content Include="icons\fi-social-pinterest.svg" />
+    <Content Include="icons\fi-social-stumbleupon.svg" />
+    <Content Include="icons\fi-social-twitter.svg" />
     <Content Include="packages.config" />
+    <Content Include="privacypolicy.html" />
+    <Content Include="robots.txt" />
     <Content Include="Scripts\Libraries\jquery-2.1.1.min.map" />
     <Content Include="Assets\Images\underwater.json" />
     <None Include="Web.Debug.config">
@@ -102,7 +114,9 @@
     <Content Include="Scripts\Libraries\soundjs-0.5.2.min.js" />
     <Content Include="Scripts\Libraries\tweenjs-0.5.1.min.js" />
     <Content Include="Styles\app.css" />
+    <Content Include="Styles\foundation.css" />
     <Content Include="Styles\reset.css" />
+    <Content Include="terms_and_conditions.html" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
